--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,600,600italic,700");
 @import url("fontawesome-all.min.css");
 
-	Miniport by HTML5 UP
+	/* Miniport by HTML5 UP
 	
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
