--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2444,3 +2444,17 @@ input, select, textarea {
 
 	}
 
+
+/* Gradient Background Animation */
+body {
+    background: linear-gradient(270deg, #ff7e5f, #feb47b, #43b3e0, #4f4f4f);
+    background-size: 800% 800%;
+    animation: gradientBackground 15s ease infinite;
+}
+
+/* Define Animation */
+@keyframes gradientBackground {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+}
