--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2443,3 +2443,11 @@ input, select, textarea {
 					}
 
 	}
+
+#nav {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: #333;
+    z-index: 10;
+}
