--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2499,3 +2499,10 @@ body {
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2); /* Adds a shadow */
 }
 
+.box.style2 {
+    transition: box-shadow 0.3s ease-in-out;
+}
+
+.box.style2:hover {
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+}
